--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <repository>
       <id>github</id>
       <name>GitHub Apache Maven Packages</name>
-      <url>https://github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-Liam-Munley#submission</url>
+      <url>https://github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-Liam-Munley</url>
     </repository>
   </distributionManagement>
 
