--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.wonsunahn</groupId>
-  <artifactId>cs1632-cicd-pipelines-ltm</artifactId>
+  <artifactId>cs1632-cicd-pipelines-ltm21</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
 
@@ -37,7 +37,7 @@
     <repository>
       <id>github</id>
       <name>GitHub Apache Maven Packages</name>
-      <url>https://github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-Liam-Munley</url>
+      <url>https://maven.pkg.github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-Liam-Munley</url>
     </repository>
   </distributionManagement>
 
