--- a/pom.xml
+++ b/pom.xml
@@ -33,20 +33,22 @@
     <url>http://github.com/wonsunahn/CS1632_CICD_JUnit/tree/master</url>
    </scm>
 
-  <distributionManagement>
+   <distributionManagement>
     <repository>
       <id>github</id>
       <name>GitHub Apache Maven Packages</name>
-      <url>https://maven.pkg.github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-Liam-Munley#submission</url>
+      <url>https://maven.pkg.github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-Liam-Munley</url>
     </repository>
   </distributionManagement>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+	 <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
     <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
+    <sonar.organization>cs1632</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencies>
@@ -56,7 +58,7 @@
       <artifactId>mockito-core</artifactId>
       <version>5.7.0</version>
       <scope>test</scope>
-    </dependency>
+	 </dependency>
 
 
     <dependency>
